--- a/peterk/backend/templates/backend/index.html
+++ b/peterk/backend/templates/backend/index.html
@@ -38,5 +38,6 @@
     </div>
   </div>
   
-<a class="exit_a"  href="{% url 'portfolio' %}" alt="portfolio">EXPLORE MORE</a>
+<a class="exit_a"  href="{% url 'portfolio' %}" alt="portfolio">EXPLORE MORE
+</a>
 {% endblock %}
