portfolio page design started

--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -3,8 +3,11 @@
 
 {% block head %}
 <title>Main</title>
+<link rel="stylesheet" href="{% static 'styles/portfolio.css' %}">
 {% endblock %}
 
 {% block body %}
-<h1>Portfolio</h1>
+<h1 id="name">Peter Kulisov</h1>
+<h1 id="slogan">I'm coding</h1>
+<p class="description">I'm software engineer specializing in web dev</p>
 {% endblock %}
