--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -7,7 +7,17 @@
 {% endblock %}
 
 {% block body %}
+<div class="name_container">
 <h1 id="name">Peter Kulisov</h1>
+<span class="name_popup">subjects_name</span>
+
+</div>
+
 <h1 id="slogan">I'm coding</h1>
 <p class="description">I'm software engineer specializing in web dev</p>
+<div class="popup_line">
+<svg height="200" width="150">
+    <polyline points="0,150 20,150 20,0 55,0" style="stroke:rgb(100, 255, 218); stroke-width: 2; fill:none"></polyline>
+</svg>
+</div>
 {% endblock %}
