--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -8,16 +8,44 @@
 
 {% block body %}
 <div class="name_container">
-<h1 id="name">Peter Kulisov</h1>
-<span class="name_popup">subjects_name</span>
-
+<h1 id="name">Peter Kulisov.</h1>
+<span class="name_popup1">
+    <div id="parent">
+        subjects_name
+        <div id="border"></div>
+    </div>
+</span>
 </div>
 
-<h1 id="slogan">I'm coding</h1>
+<h1 id="slogan">I'm coding.</h1>
 <p class="description">I'm software engineer specializing in web dev</p>
 <div class="popup_line">
 <svg height="200" width="150">
-    <polyline points="0,150 20,150 20,0 55,0" style="stroke:rgb(100, 255, 218); stroke-width: 2; fill:none"></polyline>
+    <polyline id="polyline"points="15,150 35,150 35,0 55,0" style="stroke:rgb(100, 255, 218); stroke-width: 2; fill:none"></polyline>
 </svg>
 </div>
+
+<span class="name_popup2">
+    <div id="parent2">
+        subjects_occupation
+        <div id="border"></div>
+    </div>
+</span>
+<div class="popup_line2">
+<svg height="800" width="150">
+    <polyline points="150,290 75,290 75,0 100,0" style="stroke:rgb(100, 255, 218); stroke-width: 2; fill:none"></polyline>
+</svg>
+</div>
+
+<span class="name_popup3">
+    <div id="parent3">
+        occupation_description
+        <div id="border"></div>
+    </div>
+</span>
+<div class="popup_line3">
+    <svg height="100" width="300">
+        <polyline points="270,57 12,57 0,8" style="stroke:rgb(100, 255, 218); stroke-width: 2; fill:none"></polyline>
+    </svg>
+    </div>
 {% endblock %}
