--- a/peterk/backend/static/styles/portfolio.css
+++ b/peterk/backend/static/styles/portfolio.css
@@ -4,25 +4,29 @@ body {
 }
 
 .name_container {
-    margin-top: 14%;
+    position: absolute;
+    width: 100%;
+    top: 25%;
     margin-left: 8%; 
 }
 
 #name {
     font-size: 7em;
     margin-bottom: 0%;
-    color: #ccd6f6;;
+    color: #ccd6f6;
 }
 #slogan {
     font-size: 7em;
-    margin-top: 0%;
-    padding-top: 0%;
+    position: absolute;
+    top: 40%;
     margin-left: 8%;
     color: #8892b0;
 }
 
 .description {
     color: #495670;
+    position: absolute;
+    top: 60%;
     font-size: 2em;
     margin-left: 8%;
 }
@@ -31,8 +35,8 @@ body {
     color: #64ffda;
     font-size: 1em;
     position: absolute;
-    left: 55%;
-    top: 20%
+    left: 47%;
+    top: -50%
 }
 
 .popup_line {
@@ -78,7 +82,7 @@ body {
     font-family: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace; 
     font-size: 1em;
     color: rgba(100, 255, 218,.70);
-    position: relative;
+    position: inherit;
   }
   
   .name_popup2 {
@@ -142,3 +146,197 @@ body {
     left: 30%;
     top: 68%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*-------------Reset-------------*/
+button {
+    background: none;
+    box-shadow: none;
+    border: none;
+    cursor: pointer;
+  }
+  button:focus, input:focus {
+    outline: 0;
+  }
+  html {
+    scroll-behavior: smooth;
+  }
+  /*-------------Layout-------------*/
+  body {
+    line-height: 1.5em;
+    padding: 0;
+    margin: 0;
+  }
+  section {
+    height: 100vh;
+  }
+  #home {
+    background-color: rgb(7, 24, 51);
+  }
+  #about {
+    background-color:  rgb(7, 24, 51);
+  }
+  #work {
+    background-color:  rgb(7, 24, 51);
+  }
+  #contact {
+    background-color:  rgb(7, 24, 51);
+  }
+  /*-------------Helpers-------------*/
+  .skew {
+    transform: skew(-20deg);
+  }
+  .un-skew {
+    transform: skew(20deg);
+  }
+  /*-------------Nav-------------*/
+  #nav-wrapper {
+    overflow: hidden;
+    width: 100%;
+    margin: 0 auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+  }
+  #nav {
+    background-color:rgb(7, 24, 51);
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    font-family: "Saira Semi Condensed", sans-serif;
+    height: 4em;
+    overflow: hidden;
+  }
+  #nav.nav-visible {
+    height: 100%;
+    overflow: auto;
+  }
+  .nav {
+    display: flex;
+    height: 4em;
+    line-height: 4em;
+    flex-grow: 1;
+  }
+  .nav-link, .logo {
+    padding: 0 1em;
+  }
+  span.gradient {
+    background: #64ffda;
+    background: -webkit-linear-gradient(45deg, #64ffda, #5aefcccd);
+    background: linear-gradient(45deg, #03a68e, #64ffda);
+    padding: 0 1em;
+    position: relative;
+    right: 1em;
+    margin-right: auto;
+  }
+  span.gradient:hover {
+    animation-name: logo-hover;
+    animation-duration: 0.3s;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(0.17, 0.57, 0.31, 0.85);
+  }
+  h1.logo {
+    font-weight: 300;
+    font-size: 1.75em;
+    line-height: 0.75em;
+    color: #fff;
+  }
+  h1.logo a, a:active, a:hover, a:visited {
+    text-decoration: none;
+    color: #fff;
+  }
+  .nav-link {
+    text-transform: uppercase;
+    text-align: center;
+    border-top: 0.5px solid #ddd;
+  }
+  a:link, a:visited, a:active {
+    text-decoration: none;
+    color: #64ffda;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
+  .right {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+  .btn-nav {
+    color: #64ffda;
+    padding-left: 2em;
+    padding-right: 2em;
+  }
+  @media (min-width: 800px) {
+    #nav-wrapper {
+      overflow: hidden;
+    }
+    #nav {
+      overflow: hidden;
+      flex-direction: row;
+    }
+    .nav-link {
+      border-top: none;
+    }
+    .right {
+      overflow: hidden;
+      flex-direction: row;
+      justify-content: flex-end;
+      position: relative;
+      left: 1.5em;
+      height: auto;
+    }
+    .btn-nav {
+      display: none;
+    }
+    .nav a:link.active, a:visited.active, a:active.active {
+      background: #64ffda;
+      background: -webkit-linear-gradient(45deg, #64ffda, #12b58f);
+      background: linear-gradient(45deg, #64ffda, #12b58f);
+      color: #fff;
+    }
+    .nav-link-span {
+      transform: skew(20deg);
+      display: inline-block;
+    }
+    .nav-link {
+      transform: skew(-20deg);
+      color: #777;
+      text-decoration: none;
+    }
+    .nav-link:last-child {
+      padding-right: 3em;
+    }
+    a:hover.nav-link:not(.active) {
+      color: #444;
+      background: #ddd;
+      background: linear-gradient(45deg, #fff, #ddd);
+    }
+  }
+  @keyframes logo-hover {
+    20% {
+      padding-right: 0em;
+    }
+    100% {
+      padding-right: 5em;
+    }
+  }
+  
