--- a/peterk/backend/templates/backend/index.html
+++ b/peterk/backend/templates/backend/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-<title>Portfolio</title>
+<title>Peter Kulisov</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300">
