--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -86,4 +86,23 @@
         <polyline points="270,57 12,57 0,8" style="stroke:rgb(100, 255, 218); stroke-width: 2; fill:none"></polyline>
     </svg>
     </div>
+
+
+
+
+<div class="bio_container">
+<h3>About me</h3>
+<p>
+    Hi! My name is Peter, and I am huge fun of programming and tech in general. I do enjoy a results, but I enjoy a process no less.
+</p>
+<p>
+    I began my path as a developer from school while building simple programs on study languches.
+    After spending 4 years in uni studying ICT, I'm finnaly back to code.
+</p>
+<p>
+    Utilizing my advanced understanding of network, operation systems, and creative nature of myself I end up being a web developer.
+    I feel priviledged doing job I like.
+</p>
+</div>
+<img id="bio_photo" src="{% static 'images/doge.jpg' %}" alt="bio_photo">
 {% endblock %}
