--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -19,7 +19,7 @@
       <div class="nav right">
         <a href="#home" class="nav-link active"><span class="nav-link-span"><span class="u-nav">Home</span></span></a>
         <a href="#about" class="nav-link"><span class="nav-link-span"><span class="u-nav">About</span></span></a>
-        <a href="#work" class="nav-link"><span class="nav-link-span"><span class="u-nav">Work</span></span></a>
+        <a href="#work" class="nav-link"><span class="nav-link-span"><span class="u-nav">Projects</span></span></a>
         <a href="#contact" class="nav-link"><span class="nav-link-span"><span class="u-nav">Contact</span></span></a>
       </div>
     </nav>
@@ -93,16 +93,32 @@
 <div class="bio_container">
 <h3>About me</h3>
 <p>
-    Hi! My name is Peter, and I am huge fun of programming and tech in general. I do enjoy a results, but I enjoy a process no less.
+    Hi! My name is Peter, and I am a huge fan of programming and tech in general. I do enjoy results, but I enjoy a process no less.
 </p>
 <p>
-    I began my path as a developer from school while building simple programs on study languches.
-    After spending 4 years in uni studying ICT, I'm finnaly back to code.
+    I began my path as a developer from school while building simple programs on study languages. After spending 4 years in university studying ICT, I'm finally back to code.
 </p>
 <p>
-    Utilizing my advanced understanding of network, operation systems, and creative nature of myself I end up being a web developer.
-    I feel priviledged doing job I like.
+    Utilizing my advanced understanding of network, operation systems, and creative nature of myself I end up becoming a web developer. I feel privileged doing a job I like.
 </p>
 </div>
+
+<svg id="underphoto_rect" width="474" height="276">
+    <rect width="474" height="276" style="stroke:rgb(100, 255, 218); stroke-width: 10; fill:none"></rect>
+</svg>
 <img id="bio_photo" src="{% static 'images/doge.jpg' %}" alt="bio_photo">
+
+<div class="projects_container">
+    <h3>About my work</h3>
+    <p>
+        I mostly building a Django-based apps. One of them is an interactive career pathways for my current employer.
+    </p>
+    <p>
+        Feel free to cick and learn more about this project by viewing it's source code)
+    </p>
+</div>
+<a id="career_project_a">
+    
+</a>
+
 {% endblock %}
