--- a/peterk/backend/templates/backend/layout.html
+++ b/peterk/backend/templates/backend/layout.html
@@ -4,6 +4,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="{% static 'images/p_logo.png' %}">
         {% block head %}
         {% endblock %}
         
