contact form added

--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -47,21 +47,21 @@
 
 <div class="name_container">
 <h1 id="name">Peter Kulisov.</h1>
-<span class="name_popup1">
+<!-- <span class="name_popup1">
     <div id="parent">
         subjects_name
         <div id="border"></div>
     </div>
-</span>
+</span> -->
 </div>
 
 <h1 id="slogan">I'm coding.</h1>
 <p class="description">I'm software engineer specializing in web dev</p>
-<div class="popup_line">
+<!-- <div class="popup_line">
 <svg height="200" width="150">
     <polyline id="polyline"points="15,150 35,150 35,0 55,0" style="stroke:rgb(100, 255, 218); stroke-width: 2; fill:none"></polyline>
 </svg>
-</div>
+</div> -->
 
 <span class="name_popup2">
     <div id="parent2">
@@ -99,7 +99,7 @@
     I began my path as a developer from school while building simple programs on study languages. After spending 4 years in university studying ICT, I'm finally back to code.
 </p>
 <p>
-    Utilizing my advanced understanding of network, operation systems, and creative nature of myself I end up becoming a web developer. I feel privileged doing a job I like.
+    Utilizing my advanced understanding of network, operation systems, and creative nature of myself I end up becoming a web developer.
 </p>
 </div>
 
@@ -120,5 +120,44 @@
 <a id="career_project_a">
     
 </a>
+
+<div class="contact_container">
+	<div class="row">
+			<h1 class="new">contact us</h1>
+	</div>
+	<div class="row">
+			<h4 style="text-align:center">We'd love to hear from you!</h4>
+	</div>
+	<div class="row input-container">
+			<div class="col-xs-12">
+				<div class="styled-input wide">
+					<input type="text" required />
+					<label>Name</label> 
+				</div>
+			</div>
+			<div class="col-md-6 col-sm-12">
+				<div class="styled-input">
+					<input type="text" required />
+					<label>Email</label> 
+				</div>
+			</div>
+			<div class="col-md-6 col-sm-12">
+				<div class="styled-input" style="float:right;">
+					<input type="text" required />
+					<label>Phone Number</label> 
+				</div>
+			</div>
+			<div class="col-xs-12">
+				<div class="styled-input wide">
+					<textarea required></textarea>
+					<label>Message</label>
+				</div>
+			</div>
+			<div class="col-xs-12">
+				<div class="btn-lrg submit-btn">Send Message</div>
+			</div>
+	</div>
+</div>
+   
 
 {% endblock %}
