--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -117,46 +117,51 @@
         Feel free to cick and learn more about this project by viewing it's source code)
     </p>
 </div>
-<a id="career_project_a">
-    
+<a id="career_project_a" href="#">
+    <img src="{% static 'images/career_project.png' %}" alt="career_project">
 </a>
 
 <div class="contact_container">
-	<div class="row">
-			<h1 class="new">contact us</h1>
+	<form action="{% url 'message' %}" method="post">
+        {% csrf_token %}
+    <div class="row">
+			<h1 class="new">contact me</h1>
 	</div>
 	<div class="row">
-			<h4 style="text-align:center">We'd love to hear from you!</h4>
+			<h4 style="text-align:center">I'd love to hear from you!</h4>
 	</div>
 	<div class="row input-container">
 			<div class="col-xs-12">
 				<div class="styled-input wide">
-					<input type="text" required />
+					<input type="text" name="name" required />
 					<label>Name</label> 
 				</div>
 			</div>
 			<div class="col-md-6 col-sm-12">
 				<div class="styled-input">
-					<input type="text" required />
+					<input type="email" name="email" required />
 					<label>Email</label> 
 				</div>
 			</div>
 			<div class="col-md-6 col-sm-12">
 				<div class="styled-input" style="float:right;">
-					<input type="text" required />
+					<input type="text" name="phone_number" required />
 					<label>Phone Number</label> 
 				</div>
 			</div>
 			<div class="col-xs-12">
 				<div class="styled-input wide">
-					<textarea required></textarea>
+					<textarea name="message" required></textarea>
 					<label>Message</label>
 				</div>
 			</div>
 			<div class="col-xs-12">
-				<div class="btn-lrg submit-btn">Send Message</div>
+				<div class="btn-lrg submit-btn">
+                    <input class="btn-lrg submit-btn" type="submit" value="Send Message">
+                </div>
 			</div>
 	</div>
+    </form>
 </div>
    
 
