--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -117,7 +117,7 @@
         Feel free to cick and learn more about this project by viewing it's source code)
     </p>
 </div>
-<a id="career_project_a" href="#">
+<a id="career_project_a" href="https://github.com/mudriy-glist/career_map" target="_blank">>
     <img src="{% static 'images/career_project.png' %}" alt="career_project">
 </a>
 
