--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -117,6 +117,9 @@
         Feel free to cick and learn more about this project by viewing it's source code)
     </p>
 </div>
+<svg id="underproject_rect" width="470" height="350">
+    <rect width="470" height="350" style="stroke:rgb(100, 255, 218); stroke-width: 10; fill:none"></rect>
+</svg>
 <a id="career_project_a" href="https://github.com/mudriy-glist/career_map" target="_blank">>
     <img src="{% static 'images/career_project.png' %}" alt="career_project">
 </a>
