--- a/peterk/backend/static/styles/portfolio.css
+++ b/peterk/backend/static/styles/portfolio.css
@@ -504,7 +504,7 @@ textarea {
   border-radius: 60px;
   display: inline-block;
   background-color: rgb(100, 255, 218);
-  color: #999;
+  color: rgb(0, 0, 0);
   font-size: 18px;
   cursor: pointer;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.06),
