media for 956px->1275px done

--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -76,7 +76,7 @@
     </span>
     <div class="popup_line2">
     <svg height="800" width="150">
-        <polyline points="150,290 75,290 75,0 100,0" style="stroke:rgb(100, 255, 218); stroke-width: 2; fill:none"></polyline>
+        <polyline points="120,290 10,290 10,0 30,0" style="stroke:rgb(100, 255, 218); stroke-width: 2; fill:none"></polyline>
     </svg>
     </div>
 </div>
@@ -127,7 +127,7 @@
 <svg id="underproject_rect" width="470" height="350">
     <rect width="470" height="350" style="stroke:rgb(100, 255, 218); stroke-width: 10; fill:none"></rect>
 </svg>
-<a id="career_project_a" href="https://github.com/mudriy-glist/career_map" target="_blank">>
+<a id="career_project_a" href="https://github.com/mudriy-glist/career_map" target="_blank">
     <img src="{% static 'images/career_project.png' %}" alt="career_project">
 </a>
 
