design finished/index page removed

--- a/peterk/backend/static/styles/portfolio.css
+++ b/peterk/backend/static/styles/portfolio.css
@@ -402,8 +402,8 @@ button {
 .projects_container {
   position:absolute;
     top:240%;
-    margin-left: 50%;
-    margin-right: 25%;
+    margin-left: 60%;
+    margin-right: 15%;
     color: #ccd6f6;
     font-size: 1.3em;
 }
@@ -950,7 +950,7 @@ button {
 .bio_container {
     position:absolute;
     top:140%;
-    margin-left: 25%;
+    margin-left: 5%;
     margin-right: 50%;
     color: #ccd6f6;
     font-size: 1.3em;
@@ -976,8 +976,8 @@ button {
 .projects_container {
   position:absolute;
     top:240%;
-    margin-left: 50%;
-    margin-right: 25%;
+    margin-left: 640px;
+    margin-right: 5%;
     color: #ccd6f6;
     font-size: 1.3em;
 }
@@ -991,7 +991,7 @@ button {
   overflow: hidden;
   position: absolute;
   top: 243%;
-  left: 20%;
+  left: 6%;
   width: 470px;
   height: 350px;
   border-radius: 2%
@@ -999,7 +999,7 @@ button {
 #underproject_rect {
   position: absolute;
   top: 246%;
-  left: 19%;
+  left: 5%;
   border-radius: 2%
 }
 /* #career_project_a {
