my pic added/portfolio button added

--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -13,7 +13,7 @@
 <header id="nav-wrapper">
     <nav id="nav">
       <div class="nav left">
-        <span class="gradient skew"><h1 class="logo un-skew"><a href="{% url "portfolio" %}">PK</a></h1></span>
+        <span class="gradient skew"><h1 class="logo un-skew"><a href="{% static 'images/cv.pdf' %}">My CV</a></h1></span>
         <button id="menu" class="btn-nav"><span class="fas fa-bars"></span></button>
       </div>
       <div class="nav right">
@@ -113,7 +113,7 @@
 <svg id="underphoto_rect" width="474" height="276">
     <rect width="474" height="276" style="stroke:rgb(100, 255, 218); stroke-width: 10; fill:none"></rect>
 </svg>
-<img id="bio_photo" src="{% static 'images/doge.jpg' %}" alt="bio_photo">
+<img id="bio_photo" src="{% static 'images/pic_me.png' %}" alt="bio_photo" width="474" height="276">
 
 <div class="projects_container">
     <h3>About my work</h3>
