--- a/peterk/backend/templates/backend/layout.html
+++ b/peterk/backend/templates/backend/layout.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <link rel="icon" href="{% static 'images/p_logo.png' %}">
         {% block head %}
         {% endblock %}
