--- a/peterk/backend/templates/backend/portfolio.html
+++ b/peterk/backend/templates/backend/portfolio.html
@@ -13,7 +13,7 @@
 <header id="nav-wrapper">
     <nav id="nav">
       <div class="nav left">
-        <span class="gradient skew"><h1 class="logo un-skew"><a href="{% static 'images/cv.pdf' %}">My CV</a></h1></span>
+        <span class="gradient skew"><h1 class="logo un-skew"><a href="{% static 'images/cv.pdf' %}" target="_blank">My CV</a></h1></span>
         <button id="menu" class="btn-nav"><span class="fas fa-bars"></span></button>
       </div>
       <div class="nav right">
